--- a/cryptographic-message-syntax/Cargo.toml
+++ b/cryptographic-message-syntax/Cargo.toml
@@ -12,13 +12,13 @@ repository = "https://github.com/indygreg/cryptography-rs.git"
 readme = "README.md"
 
 [dependencies]
+aws-lc-rs = "1.15.4"
 bcder = "0.7.6"
 bytes = "1.11.0"
 chrono = { version = "0.4.42", default-features = false }
 hex = "0.4.3"
 pem = "3.0.6"
 reqwest = { version = "0.13.2", default-features = false, features = ["blocking", "rustls"], optional = true }
-ring = "0.17.14"
 signature = { version = "2.2.0", features = ["std"] }
 
 [dependencies.x509-certificate]
