--- a/x509-certificate/Cargo.toml
+++ b/x509-certificate/Cargo.toml
@@ -15,13 +15,13 @@ readme = "README.md"
 test = []
 
 [dependencies]
+aws-lc-rs = "1.15.4"
 bcder = "0.7.6"
 bytes = "1.11.0"
 chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
 der = { version = "0.7.10", features = ["alloc", "zeroize"] }
 hex = "0.4.3"
 pem = "3.0.6"
-ring = "0.17.14"
 signature = { version = "2.2.0", features = ["std"] }
 spki = { version = "0.7.3", features = ["alloc"] }
 thiserror = "2.0.17"
