--- a/cryptographic-message-syntax/Cargo.toml
+++ b/cryptographic-message-syntax/Cargo.toml
@@ -1,14 +1,14 @@
 [package]
-name = "cryptographic-message-syntax"
+name = "isideload-cryptographic-message-syntax"
 version = "0.28.0"
-authors = ["Gregory Szorc <gregory.szorc@gmail.com>"]
+authors = ["Nicholas Sharp <nab@nabdev.me>"]
 edition = "2024"
 rust-version = "1.85"
 license = "MPL-2.0"
 description = "A pure Rust implementation of Crypographic Message Syntax (RFC 5652)"
 keywords = ["cms", "rfc5652", "apple", "codesign"]
-homepage = "https://github.com/indygreg/cryptography-rs"
-repository = "https://github.com/indygreg/cryptography-rs.git"
+homepage = "https://github.com/nab138/isideload-cryptography-rs"
+repository = "https://github.com/nab138/isideload-cryptography-rs.git"
 readme = "README.md"
 
 [dependencies]
